--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,26 +1,24 @@
 ---
-type ContactData = [string, string, string?];
+type ContactData = [string, string, string?]
 
 interface Props {
-  records: ContactData[];
+  records: ContactData[]
 }
 
-const { records } = Astro.props;
+const { records } = Astro.props
 
 const itemClasses =
-  "mb-1 p-4 print:p-0 rounded-lg flex items-center justify-start print:block text-slate-300 bg-slate-900/50 hover:bg-slate-900/95 ring-1 ring-slate-800/60 hover:text-blue-300 transition-colors print:bg-transparent print:text-slate-700";
+  "mb-1 p-4 print:p-0 rounded-lg flex items-center justify-start print:block text-slate-300 bg-slate-900/50 hover:bg-slate-900/95 ring-1 ring-slate-800/60 hover:text-blue-300 transition-colors print:bg-transparent print:text-slate-700"
 ---
 
 <address>
   <span class="sr-only">Contact information:</span>
-  <ul
-    class="grid print:inline md:grid-cols-2 lg:grid-cols-4 gap-3 mb-10 print:mb-5 not-italic"
-  >
+  <ul class="mb-10 grid gap-3 not-italic md:grid-cols-2 lg:grid-cols-4 print:mb-5 print:inline">
     {
       records.map(([url, title, prefix]) => (
         <li>
           <a href={url} class={itemClasses}>
-            {prefix && <span class="opacity-65 mr-2">{prefix}: </span>}
+            {prefix && <span class="mr-2 opacity-65">{prefix}: </span>}
             {title}
           </a>
         </li>
