--- a/src/components/ProjectFooter.astro
+++ b/src/components/ProjectFooter.astro
@@ -69,6 +69,6 @@ const { tech, links, projectName } = Astro.props
   }
   <hr class="my-4 border-t border-slate-700/40" />
 </div>
-<div class="flex flex-wrap gap-2">
-  {tech.map((techItem: string) => <span class={classes.pillSm}>{techItem}</span>)}
+<div class="flex flex-wrap gap-1">
+  {tech.map((techItem) => <span class={classes.pillXs}>{techItem}</span>)}
 </div>
